# apiYalatech

./: ChangePrice.py  GetList.py  ScriptPythonCambiarPrecio.py  database.txt  pruebaDateBase.py  script python para cambiar precio etiqueta.txt  test.py
actualizarPrecios/: app.py  database.txt  pyproject.toml
actualizarPrecios/src/core/: __init__.py  producto.py  prueba.py
actualizarPrecios/src/web/: __init__.py  config.py
actualizarPrecios/src/web/templates/: index.html
actualizarPrecios/static/: script.js  style.css
actualizarPrecios/templates/: index.html
