[tool.poetry]
name = "actualizarprecios"
version = "0.1.0"
description = ""
authors = ["NOVOMISKI MATEO MAXIMO <mateonovo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pytz = "^2023.3.post1"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
pymssql = "^2.2.10"
flask-sqlalchemy = "^3.1.1"
pyodbc = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
